src/objects/QPMS__Inspection_Sub_Task__c.object
<CustomObject>
    <description>This is the Child object for Inspection General Tasks.</description>
    <fields>
        <fullName>QPMS__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Fie;d is used to save completed (by user).</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspection_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>This Field is used to save completed date</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Details__c</fullName>
        <description>This ll hold details of task</description>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Task</label>
        <referenceTo>QPMS__Inspection_Task__c</referenceTo>
        <relationshipLabel>Inspection Sub Tasks</relationshipLabel>
        <relationshipName>Inspection_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ParentRecordForAudittrail__c</fullName>
        <formula>QPMS__Inspection_Task__r.QPMS__Inspection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRecordForAudittrail</label>
        <type>Text</type>
    </fields>
    <label>Inspection Sub Task</label>
    <nameField>
        <displayFormat>IST-{00000}</displayFormat>
        <label>Inspection General Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Sub Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__AdhocTask_Actions</fullName>
        <active>true</active>
        <description>AdhocTask Actions Record Type</description>
        <label>AdhocTask Actions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>